cart reducer created

--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -141,3 +141,18 @@ p {
 section {
     flex-grow: 1;
 }
+
+
+.color_mixed {
+    background: conic-gradient(
+        hsl(360 100% 50%),
+        hsl(315 100% 50%),
+        hsl(270 100% 50%),
+        hsl(225 100% 50%),
+        hsl(180 100% 50%),
+        hsl(135 100% 50%),
+        hsl(90 100% 50%),
+        hsl(45 100% 50%),
+        hsl(0 100% 50%)
+      );
+}
