--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -6,7 +6,7 @@ $xs: 480px;
 
 $black: #000;
 $white: #FFF;
-$color_danger: #ffa0a0;
+$color_input_error: #ffa0a0;
 
 
 $text_basic: #333;
@@ -27,6 +27,8 @@ $transition_gallery: 0.2s ease-out;
 $light: #EBEBEB;
 $dark: #286181;
 $color_error: red;
+$color_danger: red;
+$color_success: green;
 $header_height: 80px;
 $nav_height: 550px;
 
