--- a/src/components/FiberItem/fiber-item.scss
+++ b/src/components/FiberItem/fiber-item.scss
@@ -166,7 +166,7 @@
                     margin-left: 15px;
                     margin-top: 10px;
 
-                    &.mixed {
+                    /*&.mixed {
                         background: conic-gradient(
                             hsl(360 100% 50%),
                             hsl(315 100% 50%),
@@ -178,7 +178,7 @@
                             hsl(45 100% 50%),
                             hsl(0 100% 50%)
                           );
-                    }
+                    }*/
                 }
     
     
