--- a/src/components/Gallery/gallery.scss
+++ b/src/components/Gallery/gallery.scss
@@ -87,7 +87,7 @@
                     }
                 }
     
-                & > .colors__container {
+                /*& > .colors__container {
                     margin-top: 7px;
                     width: 100%;
                     display: flex;
@@ -123,7 +123,7 @@
                     }
         
         
-                }
+                }*/
     
 
             }
