--- a/src/components/CartContent/cart-content.scss
+++ b/src/components/CartContent/cart-content.scss
@@ -3,16 +3,28 @@
 
 .cart-content {
     width: 100%;
-
+    position: relative;
+    min-height: 30px;
     
     & .cart__item {
         display: flex;
-        align-items: center;
+        align-items: stretch;
+        justify-content: flex-end;
+        border-bottom: 1px solid var(--main_vv);
+        padding: 20px 0px 20px 10px;
+        width: 100%;
+        
+        @include respond-to(md) {
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
 
 
         & > .img__cont {
-            width: 100px;
-            height: 100px;
+            width: 80px;
+            height: 80px;
+            align-self: center;
+            flex-shrink: 0;
 
             & > img {
                 height: 100%;
@@ -20,5 +32,225 @@
                 object-fit: cover;
             }
         }
+
+        & .item__block {
+            display: flex;
+            flex-direction: column;
+            padding-left: 15px;
+            padding-right: 15px;
+            //border-right: 1px solid var(--main_vv);
+
+        
+            
+            & > span:first-of-type {
+                font-size: 20px;
+                text-align: center;
+                align-self: flex-start;
+                text-align: center;
+            }
+
+            & .name-link {
+                font-size: 16px;
+                display: flex;
+                flex-grow: 1;
+                align-items: center;
+
+            }
+
+            & .fiber {
+                font-size: 16px;
+                display: flex;
+                flex-grow: 1;
+                align-items: center;
+            }
+
+            & .color__container {
+                margin-left: auto;
+                margin-right: auto;
+                display: flex;
+                flex-grow: 1;
+                align-items: center;
+
+                & .color {
+                    width: 20px;
+                    height: 20px;
+                    border-radius: 50%;
+                }
+            }
+
+            & .amount__container {
+                display: flex;
+                display: flex;
+                flex-grow: 1;
+                align-items: center;
+
+                & input {
+                    font-size: 20px;
+                    padding-right: 5px;
+                    font-weight: 700;
+                    outline: none;
+                    width: 50px;
+                    text-align: end;
+                    border: 1px solid var(--main_vv);
+                    background-color: var(--text_contrast);
+                    color: var(--text);
+                    transition: color 1s, background-color 1s;
+                    border-radius: 5px;
+                }
+            
+                &  .amount-changer {
+                    background-color: transparent;
+                    outline: none;
+                    border: none;
+                    font-size: 20px;
+                    font-weight: 800;
+                    cursor: pointer;
+                    transition: color 1s, background-color 1s;
+            
+                    &:nth-of-type(1) {
+                        margin-right: 5px;
+                    }
+            
+                    &:nth-of-type(2) {
+                        margin-left: 5px;
+                    }
+            
+                }
+
+            }
+
+
+            &:nth-of-type(2) {
+                margin-right: auto;
+                
+                @include respond-to(md) {
+                    width: 100%;
+                    order: -1;
+                    padding-left: 0;
+
+                    & > span:nth-of-type(1) {
+                        display: none;
+                    }
+                    
+                    & > a {
+                        text-align: center;
+                        display: block;
+                        margin-bottom: 20px;
+                        margin-top: 20px;
+                        font-size: 20px;
+                    }
+                }
+
+            }
+            
+            &:nth-of-type(3) { //fiber
+                width: 140px;
+                flex-shrink: 0;
+
+                @include respond-to(sm) {
+                    flex-direction: row;
+                    margin-right: auto;
+                    align-self: center;
+                    width: auto;
+                    gap: 10px;
+                }
+
+                & span {
+                    margin-left: auto;
+                    margin-right: auto;
+                    text-align: center;
+                    
+                    @include respond-to(sm) {
+                        font-size: 16px;
+                    }
+                }
+
+            }
+
+
+            &:nth-of-type(4) { // color
+                width: 140px;
+                flex-shrink: 0;
+
+                @include respond-to(sm) {
+                    flex-direction: row;
+                    margin-right: auto;
+                    align-self: center;
+                    width: auto;
+                    gap: 10px;
+                }
+
+                & span {
+                    margin-left: auto;
+                    margin-right: auto;
+                    text-align: center;
+                    
+                    @include respond-to(sm) {
+                        font-size: 16px;
+                    }
+                }
+
+            }
+
+
+            &:nth-of-type(5) { //amount
+                width: 140px;
+                flex-shrink: 0;
+
+                @include respond-to(sm) {
+                    flex-direction: row;
+                    margin-right: auto;
+                    align-self: center;
+                    width: auto;
+                    gap: 10px;
+                }
+
+                & span {
+                    margin-left: auto;
+                    margin-right: auto;
+                    text-align: center;
+                    
+                    @include respond-to(sm) {
+                        font-size: 16px;
+                    }
+                }
+
+            }
+
+
+        }
+
+        & .delete__container {
+            display: flex;
+            flex-grow: 1;
+            align-items: center;
+            margin-left: 5px;  
+            
+            & .delete__wrapper {
+                width: 20px;
+                height: 20px;
+                position: relative;
+            }
+        }
+
+        .breaker_md {
+            display: none;
+            height: 1px;
+            @include respond-to(md) {
+                display: block;
+                flex-basis: 100%;
+            }
+        }
+
+        
+        .breaker_sm {
+            display: none;
+            height: 20px;
+            @include respond-to(sm) {
+                display: block;
+                flex-basis: 100%;
+            }
+        }
+        
     }
 }
