--- a/src/components/CartInformer/cart-informer.scss
+++ b/src/components/CartInformer/cart-informer.scss
@@ -15,6 +15,6 @@
     & span {
         font-size: 14px;
         font-weight: 700;
-        color: var(--main_vv);
+        color: var(--text);
     }
 }
