--- a/src/pages/Order/order.scss
+++ b/src/pages/Order/order.scss
@@ -126,6 +126,7 @@ section.order {
                             resize: vertical;
                             height: 8rem;
                             vertical-align: bottom;
+                            min-height: 40px;
                         }
            
         
@@ -137,7 +138,7 @@ section.order {
                             }
         
                             & > input, textarea {
-                                background-color: $color_danger;
+                                background-color: $color_input_error;
                             }
                         }
                         
@@ -238,7 +239,7 @@ section.order {
                                         overflow: hidden;
 
                                         & > div {
-                                            height: 80px;
+                                            height: 100px;
                                             width: 100%;
                                             display: flex;
                                             align-items: center;
@@ -248,7 +249,7 @@ section.order {
                                             
                                             & > img {
                                                 width: 100%;
-                                                //height: 100%;
+                                                height: 100%;
                                                 object-fit: cover;
                                             }
         
@@ -266,27 +267,18 @@ section.order {
                                     }
         
                                 }
-        
-                                & > .drop-area__cleaner {
+
+
+                                & .button_delete__container {
                                     position: absolute;
                                     right: 15px;
                                     top: 15px;
-                                    height: 20px;
-                                    width: 20px;
-                                    cursor: pointer;
-                                    transition: transform $transition_fast;
-                                    
-                                    & > img {
-                                        fill: white;
-                                        height: 100%;
-                                        width: 100%;
-                                    }
-
-                                    &:hover {
-                                        transform: scale(1.3);
-                                    }
+                                    height: 25px;
+                                    width: 25px;
                                 }
-        
+                                
+                                .delete__container
+
                                 &.active {
                                     border: 2px dotted $light;
                                     box-shadow: 0px 0px 20px $light;
@@ -302,13 +294,12 @@ section.order {
 
                 .cart-content__container {
                     width: 100%;
-                    border: 1px solid red;
-                    margin-top: 40px;
+                    margin-top: 60px;
 
                     & h3 {
                         text-align: center;
                         color: var(--text);
-                        margin-bottom: 30px;
+                        margin-bottom: 10px;
                     }
                 }
 
