--- a/src/components/CartContent/cart-content.scss
+++ b/src/components/CartContent/cart-content.scss
@@ -9,7 +9,7 @@
     & .cart__item {
         display: flex;
         align-items: stretch;
-        justify-content: flex-end;
+        justify-content: flex-start;
         border-bottom: 1px solid var(--main_vv);
         padding: 20px 0px 20px 10px;
         width: 100%;
@@ -21,8 +21,8 @@
 
 
         & > .img__cont {
-            width: 80px;
-            height: 80px;
+            width: 120px;
+            height: 120px;
             align-self: center;
             flex-shrink: 0;
 
@@ -33,7 +33,115 @@
             }
         }
 
-        & .item__block {
+        .item-descr__container {
+            display: flex;
+            flex-direction: column;
+            margin-left: 20px;
+            justify-content: space-between;
+            margin-right: auto;
+            padding-right: 30px;
+
+            & .item__block {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+
+                & span {
+                    font-size: 20px;
+                }
+                            
+                & > span:first-of-type {
+                    font-size: 20px;
+                    text-align: center;
+                    align-self: flex-start;
+                    text-align: center;
+                    margin-right: 10px;
+                }
+
+                & .color__container {
+                    margin-left: auto;
+                    margin-right: auto;
+                    display: flex;
+                    flex-grow: 1;
+                    align-items: center;
+    
+                    & .color {
+                        width: 20px;
+                        height: 20px;
+                        border-radius: 50%;
+                    }
+                }
+                
+            }
+
+        }
+        
+        .item__amount-delete {
+            //border: 1px solid red;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-end;
+
+            & .delete__container {
+                display: flex;
+                align-items: center;
+                margin-bottom: auto;
+                
+                & .delete__wrapper {
+                    width: 20px;
+                    height: 20px;
+                    position: relative;
+                }
+            }
+
+            & .amount__container {
+                display: flex;
+                align-items: center;
+                margin-bottom: auto;
+
+                & input {
+                    font-size: 20px;
+                    padding-right: 5px;
+                    font-weight: 700;
+                    outline: none;
+                    width: 50px;
+                    text-align: end;
+                    border: 1px solid var(--main_vv);
+                    background-color: var(--text_contrast);
+                    color: var(--text);
+                    transition: color 1s, background-color 1s;
+                    border-radius: 5px;
+                    height: 30px;
+                }
+            
+                &  .amount-changer {
+                    background-color: transparent;
+                    outline: none;
+                    border: none;
+                    font-size: 30px;
+                    line-height: 30px;
+                    font-weight: 800;
+                    cursor: pointer;
+                    transition: color 1s, background-color 1s;
+            
+                    &:nth-of-type(1) {
+                        margin-right: 5px;
+                    }
+            
+                    &:nth-of-type(2) {
+                        margin-left: 5px;
+                    }
+            
+                }
+            }
+
+        }
+
+
+
+/*
+        & > .item__block {
             display: flex;
             flex-direction: column;
             padding-left: 15px;
@@ -218,20 +326,9 @@
             }
 
 
-        }
+        }*/
 
-        & .delete__container {
-            display: flex;
-            flex-grow: 1;
-            align-items: center;
-            margin-left: 5px;  
-            
-            & .delete__wrapper {
-                width: 20px;
-                height: 20px;
-                position: relative;
-            }
-        }
+
 
         .breaker_md {
             display: none;
