--- a/src/components/FiberItem/fiber-item.scss
+++ b/src/components/FiberItem/fiber-item.scss
@@ -165,7 +165,8 @@
                     border-radius: 50%;
                     margin-left: 15px;
                     margin-top: 10px;
-
+                    border: 1px solid var(--text_vv);
+                    
                     /*&.mixed {
                         background: conic-gradient(
                             hsl(360 100% 50%),
