--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -26,7 +26,7 @@ $transition-theme: 1s;
 $transition_gallery: 0.2s ease-out;
 $light: #EBEBEB;
 $dark: #286181;
-$color_error: red;
+//$color_error: rgb(255, 65, 65);
 $color_danger: red;
 $color_success: green;
 $header_height: 80px;
@@ -45,6 +45,7 @@ body {
     --lang-selector: #EBEBEB;
     --lang-text: #286181;
     --lang-text_add: #286181;
+    --error: rgb(209, 16, 16);
  }
  body.dark {
     --main: rgb(7, 113, 184);//rgb(13, 96, 173);
@@ -59,6 +60,7 @@ body {
     --lang-selector: #EBEBEB;
     --lang-text: #286181;
     --lang-text_add: #EBEBEB;
+    --error: rgb(252, 71, 71);
  }
 
 
