--- a/src/components/CartContent/cart-content.scss
+++ b/src/components/CartContent/cart-content.scss
@@ -4,13 +4,12 @@
 .cart-content {
     width: 100%;
     position: relative;
-    min-height: 30px;
+    min-height: 80px;
     
     & .cart__item {
         display: grid;
         grid-template-columns: 120px 1fr auto;
         grid-template-rows: auto;
-        //align-items: stretch;
         //justify-content: flex-start;
         border-bottom: 1px solid var(--main_vv);
         padding: 20px 0px;
@@ -23,32 +22,37 @@
             grid-template-rows: auto auto;
         }
 
-
-        & > .img__cont {
-            width: 100%;
-            aspect-ratio: 1;
+        & .item__product-link_img {
+            cursor: pointer;
             align-self: center;
-            border-radius: 5px;
-            overflow: hidden;
-            //flex-shrink: 0;
-
-            /*@include respond-to(sm) {
-                width: 90px;
-                height: 90px;
-            }
-
-
-            @include respond-to(xs) {
-                width: 60px;
-                height: 80px;
-            }*/
-
-            & > img {
-                height: 100%;
+            & > .img__cont {
                 width: 100%;
-                object-fit: cover;
+                aspect-ratio: 1;
+                align-self: center;
+                border-radius: 5px;
+                overflow: hidden;
+                //flex-shrink: 0;
+    
+                /*@include respond-to(sm) {
+                    width: 90px;
+                    height: 90px;
+                }
+    
+    
+                @include respond-to(xs) {
+                    width: 60px;
+                    height: 80px;
+                }*/
+    
+                & > img {
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                }
             }
         }
+
+
 
 
         & .item__product-link {
@@ -71,13 +75,14 @@
 
                 @include respond-to(xs) {
                     margin-left: 10px;
-                    flex-shrink: 2;
+                    gap: 5px;
                 }
     
                 & .item__block {
                     display: flex;
                     flex-direction: row;
                     align-items: center;
+                    flex-wrap: wrap;
     
                     & span {
                         font-size: 20px;
@@ -92,9 +97,7 @@
                                 
                     & > span:first-of-type {
                         //font-size: 20px;
-                        text-align: center;
                         align-self: flex-start;
-                        text-align: center;
                         margin-right: 10px;
                     }
     
@@ -151,8 +154,15 @@
                 align-items: center;
                 margin-bottom: auto;
 
+                @include respond-to(sm) {
+                    margin-left: auto;
+                    margin-right: auto;
+                    padding-left: 7px;
+                }
+
                 @include respond-to(xs) {
                     margin-bottom: 0;
+                    margin-right: 0;
                 }
                 
                 & .delete__wrapper {
@@ -172,242 +182,39 @@
                 display: flex;
                 align-items: center;
                 margin-bottom: auto;
-            }
-/*
-            & .amount__container {
-                display: flex;
-                align-items: center;
-                margin-bottom: auto;
 
-                & input {
-                    font-size: 20px;
-                    padding-right: 5px;
-                    font-weight: 700;
-                    outline: none;
-                    width: 50px;
-                    text-align: end;
-                    border: 1px solid var(--main_vv);
-                    background-color: var(--text_contrast);
-                    color: var(--text);
-                    transition: color 1s, background-color 1s;
-                    border-radius: 5px;
-                    height: 30px;
+                @include respond-to(sm) {
+                    margin-left: 7px;
+                    margin-bottom: 0;
+
+                    & .amount__changer {
+                        flex-direction: column-reverse;
+
+                        & button {
+                            margin: 0;
+                        }
+                    }
                 }
-            
-                &  .amount-changer {
-                    background-color: transparent;
-                    outline: none;
-                    border: none;
-                    font-size: 30px;
-                    line-height: 30px;
-                    font-weight: 800;
-                    cursor: pointer;
-                    transition: color 1s, background-color 1s;
-            
-                    &:nth-of-type(1) {
-                        margin-right: 5px;
+
+                @include respond-to(xs) {
+                    margin-left: 8px;
+
+
+                    & .amount__changer {
+                        flex-direction: row;
+
+                        & button:nth-last-of-type(1) {
+                            margin-left: 5px;
+                        }
+
+                        & button:nth-last-of-type(2) {
+                            margin-right: 5px;
+                        }
                     }
-            
-                    &:nth-of-type(2) {
-                        margin-left: 5px;
-                    }
-            
                 }
             }
-*/
+
         }
-
-
-
-/*
-        & > .item__block {
-            display: flex;
-            flex-direction: column;
-            padding-left: 15px;
-            padding-right: 15px;
-            //border-right: 1px solid var(--main_vv);
-
-        
-            
-            & > span:first-of-type {
-                font-size: 20px;
-                text-align: center;
-                align-self: flex-start;
-                text-align: center;
-            }
-
-            & .name-link {
-                font-size: 16px;
-                display: flex;
-                flex-grow: 1;
-                align-items: center;
-
-            }
-
-            & .fiber {
-                font-size: 16px;
-                display: flex;
-                flex-grow: 1;
-                align-items: center;
-            }
-
-            & .colors__container {
-                margin-left: auto;
-                margin-right: auto;
-                display: flex;
-                flex-grow: 1;
-                align-items: center;
-
-                & .color {
-                    width: 20px;
-                    height: 20px;
-                    border-radius: 50%;
-                }
-            }
-
-            & .amount__container {
-                display: flex;
-                display: flex;
-                flex-grow: 1;
-                align-items: center;
-
-                & input {
-                    font-size: 20px;
-                    padding-right: 5px;
-                    font-weight: 700;
-                    outline: none;
-                    width: 50px;
-                    text-align: end;
-                    border: 1px solid var(--main_vv);
-                    background-color: var(--text_contrast);
-                    color: var(--text);
-                    transition: color 1s, background-color 1s;
-                    border-radius: 5px;
-                }
-            
-                &  .amount-changer {
-                    background-color: transparent;
-                    outline: none;
-                    border: none;
-                    font-size: 20px;
-                    font-weight: 800;
-                    cursor: pointer;
-                    transition: color 1s, background-color 1s;
-            
-                    &:nth-of-type(1) {
-                        margin-right: 5px;
-                    }
-            
-                    &:nth-of-type(2) {
-                        margin-left: 5px;
-                    }
-            
-                }
-
-            }
-
-
-            &:nth-of-type(2) {
-                margin-right: auto;
-                
-                @include respond-to(md) {
-                    width: 100%;
-                    order: -1;
-                    padding-left: 0;
-
-                    & > span:nth-of-type(1) {
-                        display: none;
-                    }
-                    
-                    & > a {
-                        text-align: center;
-                        display: block;
-                        margin-bottom: 20px;
-                        margin-top: 20px;
-                        font-size: 20px;
-                    }
-                }
-
-            }
-            
-            &:nth-of-type(3) { //fiber
-                width: 140px;
-                flex-shrink: 0;
-
-                @include respond-to(sm) {
-                    flex-direction: row;
-                    margin-right: auto;
-                    align-self: center;
-                    width: auto;
-                    gap: 10px;
-                }
-
-                & span {
-                    margin-left: auto;
-                    margin-right: auto;
-                    text-align: center;
-                    
-                    @include respond-to(sm) {
-                        font-size: 16px;
-                    }
-                }
-
-            }
-
-
-            &:nth-of-type(4) { // color
-                width: 140px;
-                flex-shrink: 0;
-
-                @include respond-to(sm) {
-                    flex-direction: row;
-                    margin-right: auto;
-                    align-self: center;
-                    width: auto;
-                    gap: 10px;
-                }
-
-                & span {
-                    margin-left: auto;
-                    margin-right: auto;
-                    text-align: center;
-                    
-                    @include respond-to(sm) {
-                        font-size: 16px;
-                    }
-                }
-
-            }
-
-
-            &:nth-of-type(5) { //amount
-                width: 140px;
-                flex-shrink: 0;
-
-                @include respond-to(sm) {
-                    flex-direction: row;
-                    margin-right: auto;
-                    align-self: center;
-                    width: auto;
-                    gap: 10px;
-                }
-
-                & span {
-                    margin-left: auto;
-                    margin-right: auto;
-                    text-align: center;
-                    
-                    @include respond-to(sm) {
-                        font-size: 16px;
-                    }
-                }
-
-            }
-
-
-        }*/
-
-
 
         
         .breaker_sm {
@@ -420,4 +227,9 @@
         }
         
     }
+
+
+    .cart_empty__text {
+        margin-top: 30px;   
+    }   
 }
