--- a/src/components/CatalogIntro/catalog-intro.scss
+++ b/src/components/CatalogIntro/catalog-intro.scss
@@ -3,6 +3,7 @@
 
 .catalog-intro {
     text-align: center;
+    width: 100%;
 
     h1 {
         color: var(--main_vv);
@@ -12,24 +13,36 @@
         display: flex;
         align-items: center;
         padding-top: 40px;
-
+        width: 100%;
+        
+        
         @include respond-to(sm) {
             flex-direction: column;
         }
-
+        
         & h2 {
             color: var(--main_vv);
         }
-
-        & > img {
-            max-width: 45%;
+        
+        .img__container {
+            width: 45%;
             border-radius: 15px;
+            overflow: hidden;
+            min-height: 200px;
+            position: relative;
 
             @include respond-to(sm) {
+                min-height: 100px;
                 max-width: 400px;
                 width: 100%;
             }
+            
+            & > img {
+                width: 100%;
+    
+            }
         }
+
 
         & .descr__text {
             max-width: 50%;
