--- a/src/components/Proscons/proscons.scss
+++ b/src/components/Proscons/proscons.scss
@@ -1,23 +1,34 @@
 @use '/src/assets/css/variables' as *;
 
 
-.proscons {
-    margin-top: 50px;
-    width: 100%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
+.proscons__container {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    column-gap: 15%;
+
+    @include respond-to(sm) {
+        width: 100%;
+    }
 
     @include respond-to(xs) {
-        flex-direction: column  ;
+        grid-template-columns: 1fr;
     }
 
     & > ul {
-        width: 45%;
-        font-size: 1.2rem;
+        //width: 45%;
+        font-size: 18px;
+
+        @include respond-to(sm) {
+            width: 100%;
+            font-size: 16px;
+        }
 
         @include respond-to(xs) {
             width: 100%;
+            //font-size: 14px;
         }
     }
 
@@ -25,7 +36,7 @@
         & li {
             position: relative;
             margin-left: 25px;
-            margin-top: 7px;
+            margin-top: 10px;
             &::before {
                 position: absolute;
                 left: -25px;
