--- a/src/pages/Fiber/fiber.scss
+++ b/src/pages/Fiber/fiber.scss
@@ -10,14 +10,14 @@ section.fiber {
 	
 	
 		& .fibers__container {
-			margin-top: 30px;
+			//margin-top: 30px;
 			padding-bottom: 50px;
 	
 			& .fiber__item {
-				margin-top: 150px;
+				margin-top: 200px;
 	
 				&:first-child {
-					margin-top: 0;
+					margin-top: 50px;
 				}
 	
 				&:last-child > .fiber__descr__container::after {
