--- a/src/pages/Product/product.scss
+++ b/src/pages/Product/product.scss
@@ -1,7 +1,7 @@
 @use "/src/assets/css/variables" as *;
 
 
-section.product-details {
+.page_product-details {
     background-color: var(--bg);
     transition: background-color 1s;
 
