--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -19,6 +19,11 @@
     position: relative;
     border-radius: 5px;
 
+    @include respond-to(xs) {
+        //margin-left: auto;
+        //margin-right: auto;
+    }
+
     & > svg  {
         max-height: 80%;
         right: 0;
@@ -53,10 +58,46 @@
     font-weight: 700;
     cursor: pointer;
     text-transform: uppercase;
-    transition: box-shadow $transition_fast;
+    transition: box-shadow $transition_fast, background-color $transition_theme;
 
 
     &:hover {
         box-shadow: 0px 0px 20px var(--main_vv)
+    }
+}
+
+
+
+.button_back {
+    align-self: flex-start;
+    padding: 8px 20px 8px 60px;
+    border-radius: 10px;
+    color: var(--text);
+    background-color: var(--main);
+    transition: background-color $transition_theme, color $transition_theme, box-shadow $transition_fast;
+    font-size: 18px;
+    font-weight: 700;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    position: relative;
+    border-radius: 5px;
+
+    & > svg  {
+        max-height: 80%;
+        left: 0;
+        margin-left: 25px;
+        fill: var(--text);
+        position: absolute;
+        transition: margin .2s;
+        transform: rotate(180deg);
+    }
+
+    &:hover {
+        & > svg {
+            margin-left: 15px;
+        }
+        box-shadow: 0px 0px 15px 0px var(--main);;
     }
 }
