--- a/src/components/CarouselMax/carouselmax.scss
+++ b/src/components/CarouselMax/carouselmax.scss
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    
 
     & > .ribbon {
         display: flex;
@@ -21,6 +22,7 @@
                 height: 100%;
                 overflow: hidden;
                 position: relative;
+                border-radius: 5px;
 
                 & .img__inner-container {
                     height: 100%;
