--- a/src/components/CartContent/cart-content.scss
+++ b/src/components/CartContent/cart-content.scss
@@ -12,6 +12,7 @@
         grid-template-rows: auto;
         //justify-content: flex-start;
         border-bottom: 1px solid var(--main_vv);
+        transition: border $transition_theme;
         padding: 20px 0px;
         //width: 100%;
         
@@ -113,6 +114,7 @@
                             height: 20px;
                             border-radius: 50%;
                             border: 1px solid var(--text);
+                            transition: border $transition_theme;
 
                             @include respond-to(sm) {
                                 width: 16px;
