--- a/src/components/Gallery/gallery.scss
+++ b/src/components/Gallery/gallery.scss
@@ -23,6 +23,7 @@
         cursor: pointer;
         border: 1px solid var(--main_vv);
         border-radius: 5px;
+        transition: border $transition_theme !important;
 
         @include respond-to(md) {
             width: 45%;
@@ -67,6 +68,7 @@
                     display: inline-block;
                     font-size: 20px;
                     color: var(--main_vv);
+                    transition: color $transition_theme;
                     font-weight: 700;
                     text-align: left;
                     width: 100%;
@@ -80,6 +82,7 @@
                     display: inline-block;
                     font-size: 20px;
                     color: var(--lang-text_add);
+                    transition: color $transition_theme;
                     margin-top: 10px;
 
                     @include respond-to(md) {
