--- a/src/components/ProductDetails/product-details.scss
+++ b/src/components/ProductDetails/product-details.scss
@@ -35,6 +35,7 @@
                 font-size: 18px;
                 font-weight: 700;
                 border: 1px solid var(--main_vv);
+                transition: border $transition_theme;
                 outline: none;
                 padding-left: 5px;
                 padding-right: 10px;
@@ -65,6 +66,7 @@
                 cursor: pointer;
                 margin-top: 5px;
                 border: 1px solid var(--text);
+                transition: border $transition_theme;
 
                 &:not(.disabled):not(.selected) {
 
@@ -90,20 +92,6 @@
                 }
                 
 
-                /*&.mixed {
-                    background: conic-gradient(
-                        hsl(360 100% 50%),
-                        hsl(315 100% 50%),
-                        hsl(270 100% 50%),
-                        hsl(225 100% 50%),
-                        hsl(180 100% 50%),
-                        hsl(135 100% 50%),
-                        hsl(90 100% 50%),
-                        hsl(45 100% 50%),
-                        hsl(0 100% 50%)
-                      );
-                }*/
-
                 &.selected::before {
                     content: '';
                     position: absolute;
@@ -118,21 +106,32 @@
 
                 &.disabled {
                     cursor: not-allowed;
-                    &::before, &.disabled::after {
+                    &::before, &::after {
                         content: '';
                         width: 150%;
-                        height: 1px;
+                        height: 3px;
                         background-color: var(--main_vv);
+                        //transition: background-color $transition_theme;
                         position: absolute;
                         top: 50%;
                         left: 50%;
                         transform: translate(-50%, -50%) rotate(-45deg);
                     }
+
+                    &::before {
+                       /*content: '';
+                        position: absolute;
+                        left: 50%;
+                        top: 50%;
+                        transform: translate(-50%, -50%);
+                        border-radius: 50%;
+                        width: 150%;
+                        height: 150%;
+                        border: 3px solid var(--main);*/
+                        transform: translate(-50%, -50%) rotate(45deg);
+                    }
                 }
 
-                &.disabled::after {
-                    transform: translate(-50%, -50%) rotate(45deg);
-                }
             }
 
 
