--- a/src/pages/Catalog/catalog.scss
+++ b/src/pages/Catalog/catalog.scss
@@ -1,9 +1,6 @@
 @use '/src/assets/css/variables' as *;
 
-section.catalog {
-    background-color: var(--bg);
-    transition: background-color $transition-theme;
-    flex-grow: 1;
+.page_catalog {
 
     & .container {
 
