--- a/src/pages/Fiber/fiber.scss
+++ b/src/pages/Fiber/fiber.scss
@@ -1,6 +1,6 @@
 @use '/src/assets/css/variables' as *;
 
-section.fiber {
+.page_fiber {
     background-color: var(--bg);
     transition: background-color $transition-theme;
 	flex-grow: 1;
