--- a/src/pages/Order/order.scss
+++ b/src/pages/Order/order.scss
@@ -1,6 +1,6 @@
 @use '/src/assets/css/variables' as *;
 
-section.order {
+.page_order {
     background-color: var(--bg);
     transition: background-color $transition-theme;
     flex-grow: 1;
