--- a/src/components/News/news.scss
+++ b/src/components/News/news.scss
@@ -30,11 +30,18 @@
         transition: border $transition_fast;
     }
 
-    & > img {
-       width: auto;
-       height: 230px;
-       object-fit: fill;
+    & > .img__container {
+        height: 230px;
+        width: 100%;
+        position: relative;
+        
+        & > img {
+           width: 100%;
+           height: 100%;
+           object-fit: cover;
+        }
     }
+
 
     & > div {
         margin-top: 20px;
