--- a/src/components/Spliders/Preview/splider-preview.scss
+++ b/src/components/Spliders/Preview/splider-preview.scss
@@ -206,6 +206,7 @@
                 align-items: center;
                 justify-content: center;
                 height: auto !important;
+                position: relative;
 
     
                 &.is-active {
