--- a/src/components/ProductDetails/product-details.scss
+++ b/src/components/ProductDetails/product-details.scss
@@ -13,12 +13,22 @@
         
         & > .feature {
             margin-top: 15px;
-            & > span, label {
+
+            & > span, label, a {
                 font-size: 18px;
                 
                 &:first-of-type {
                     font-weight: 700;
                 }
+            }
+
+            & a {
+                text-decoration: underline !important;
+                color: var(--main_vv);
+            }
+
+            & > span:nth-of-type(2) {
+                white-space: nowrap ;
             }
 
 
@@ -41,160 +51,145 @@
                 padding-right: 10px;
                 border-radius: 5px;
             }
+
+            @include respond-to(sm) {
+                margin-top: 20px;
+            }
+
+            &.wrap_xs {
+                @include respond-to(xs) {   
+                    & > label {
+                        text-align: center;
+                        display: flex;
+                        flex-direction: column;
+
+                        & > select {
+                            margin-top: 5px;
+                        }
+
+                    }
+                }
+            }
         }
 
-        
+
+
         & > .colors__container {
-            margin-top: 10px;
+            margin-top: 15px;
             width: 100%;
             display: flex;
             align-items: center;
             flex-wrap: wrap;
 
+            @include respond-to(xs) {
+                margin-top: 20px;
+                flex-direction: column;
+                align-items: center;
+            }
+
             & > span {
                 font-size: 18px;
                 font-weight: 700;
+
+                @include respond-to(xs) {
+                    text-align: center;
+                }
             }
 
+            & .colors__wrapper {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 10px;
+                align-items: center;
+                margin-left: 10px;
 
-            & > .color {
-                width: 20px;
-                height: 20px;
-                border-radius: 50%;
-                margin-left: 15px;
-                position: relative;
-                cursor: pointer;
-                margin-top: 5px;
-                border: 1px solid var(--text);
-                transition: border $transition_theme;
-
-                &:not(.disabled):not(.selected) {
-
-                    &::before {
-                        content: '';
-                        position: absolute;
-                        height: 100%;
-                        width: 100%;
-                        scale: 1;
-                        border-radius: 50%;
-                        border: 1px solid transparent;
-                        top: -5%;
-                        left: -5%;
-                        //transform-origin: (center);
-                        //transform: translate(-50%, -50%) rotate(-45deg);
-                        transition: scale $transition_fast, border $transition-fast;
-                    }
-
-                    &:hover::before {
-                        border-color: var(--main_vv);
-                        scale: 1.3
-                    }
+                @include respond-to(xs) {
+                    margin-top: 10px;
                 }
-                
 
-                &.selected::before {
-                    content: '';
-                    position: absolute;
-                    height: 140%;
-                    width: 140%;
+
+                & > .color {
+                    width: 20px;
+                    height: 20px;
                     border-radius: 50%;
-                    border: 3px solid var(--main_vv);
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%, -50%) rotate(-45deg);
-                }
-
-                &.disabled {
-                    cursor: not-allowed;
-                    &::before, &::after {
+                    position: relative;
+                    cursor: pointer;
+                    border: 1px solid var(--text);
+                    transition: border $transition_theme;
+    
+   
+                    &:not(.disabled):not(.selected) {
+    
+                        &::before {
+                            content: '';
+                            position: absolute;
+                            height: 100%;
+                            width: 100%;
+                            scale: 1;
+                            border-radius: 50%;
+                            border: 1px solid transparent;
+                            top: -5%;
+                            left: -5%;
+                            //transform-origin: (center);
+                            //transform: translate(-50%, -50%) rotate(-45deg);
+                            transition: scale $transition_fast, border $transition-fast;
+                        }
+    
+                        &:hover::before {
+                            border-color: var(--main_vv);
+                            scale: 1.3
+                        }
+                    }
+                    
+    
+                    &.selected::before {
                         content: '';
-                        width: 150%;
-                        height: 3px;
-                        background-color: var(--main_vv);
-                        //transition: background-color $transition_theme;
                         position: absolute;
+                        height: 140%;
+                        width: 140%;
+                        border-radius: 50%;
+                        border: 3px solid var(--main_vv);
                         top: 50%;
                         left: 50%;
                         transform: translate(-50%, -50%) rotate(-45deg);
                     }
-
-                    &::before {
-                       /*content: '';
-                        position: absolute;
-                        left: 50%;
-                        top: 50%;
-                        transform: translate(-50%, -50%);
-                        border-radius: 50%;
-                        width: 150%;
-                        height: 150%;
-                        border: 3px solid var(--main);*/
-                        transform: translate(-50%, -50%) rotate(45deg);
+    
+                    &.disabled {
+                        cursor: not-allowed;
+                        &::before, &::after {
+                            content: '';
+                            width: 150%;
+                            height: 3px;
+                            background-color: var(--main_vv);
+                            //transition: background-color $transition_theme;
+                            position: absolute;
+                            top: 50%;
+                            left: 50%;
+                            transform: translate(-50%, -50%) rotate(-45deg);
+                        }
+    
+                        &::before {
+                           /*content: '';
+                            position: absolute;
+                            left: 50%;
+                            top: 50%;
+                            transform: translate(-50%, -50%);
+                            border-radius: 50%;
+                            width: 150%;
+                            height: 150%;
+                            border: 3px solid var(--main);*/
+                            transform: translate(-50%, -50%) rotate(45deg);
+                        }
                     }
+    
                 }
-
             }
 
 
         }
 
+        
     }
 
 
-
-
-    /*
-    & .cart-adder {
-
-        width: 100%;
-        display: flex;
-        margin-top: 30px;
-        align-items: center;
-
-        & > span:first-of-type {
-            font-size: 22px;
-            font-weight: 700;
-        }
-
-        & input {
-            font-size: 24px;
-            padding-right: 5px;
-            font-weight: 700;
-            outline: none;
-            width: 50px;
-            text-align: end;
-            border: 1px solid var(--main_vv);
-            background-color: var(--text_contrast);
-            color: var(--text);
-            transition: color 1s, background-color 1s;
-        }
-
-        &  .amount-changer {
-            background-color: transparent;
-            outline: none;
-            border: none;
-            font-size: 28px;
-            font-weight: 800;
-            cursor: pointer;
-            transition: color 1s, background-color 1s;
-
-            &:nth-of-type(1) {
-                margin-left: 20px;
-                margin-right: 5px;
-            }
-
-            &:nth-of-type(2) {
-                margin-left: 5px;
-                margin-right: 20px;
-            }
-
-        }
-
-        & .button_news {
-            justify-content: center;
-            padding: 8px 40px;
-        }
-        
-
-    }*/
-    
 }   
