--- a/src/components/FiberItem/fiber-item.scss
+++ b/src/components/FiberItem/fiber-item.scss
@@ -39,7 +39,7 @@
        &::after {
             position: absolute;
             content: '';
-            width: 40%;
+            width: 80%;
             border-bottom: 1px solid var(--main_vv);
             transition: border $transition_theme;
             bottom: -100px;
@@ -47,7 +47,7 @@
             transform: translate(-50%, 0);
 
             @include respond-to(sm) {
-                width: 30%;
+                width: 80%;
             }
         }
 
@@ -63,8 +63,12 @@
                 width: 100%;
                 margin-left: auto;
                 margin-right: auto;
+
+                & .proscons__container {
+                    margin-top: 20px;
+                }
                 
-                
+                /*
                 & .features {
                     width: 100%;
                     display: grid;
@@ -113,10 +117,10 @@
                                 background-color: var(--main_vv);
                                 transform: translate(-50%, -50%);
                             }
-                        }*/
+                        }
     
                     }
-                }
+                }*/
 
 
 
@@ -155,12 +159,17 @@
 
             & .proscons {
                 margin-top: 70px;
-                h3 {
-                    margin-bottom: 15px;
+                /*h3 {
+                    //margin-bottom: 15px;
+
                                         
                     @include respond-to(xs) {
                         margin-bottom: 10px;
                     }
+                }*/
+
+                & .proscons__container {
+                    margin-top: 20px;
                 }
             }
 
@@ -170,4 +179,5 @@
 
 
     }
+
 }
