--- a/src/components/FiberItem/fiber-item.scss
+++ b/src/components/FiberItem/fiber-item.scss
@@ -36,7 +36,7 @@
             padding-top: 40px;
         }
        
-       &::after {
+      /* &::after {
             position: absolute;
             content: '';
             width: 80%;
@@ -49,7 +49,7 @@
             @include respond-to(sm) {
                 width: 80%;
             }
-        }
+        }*/
 
         & > .block_text {
 
