--- a/src/components/News/news.scss
+++ b/src/components/News/news.scss
@@ -3,37 +3,17 @@
 
 .news {
     width: 100%;
-    border: 1px solid var(--main);
-    transition: border $transition_theme;
-    border-radius: 5px;
-    padding-bottom: 20px;
-    max-width: 22%;
-    min-width: 250px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    //background-color: rgba(#286181, 0.1);
-    padding-right: 10px;
-    padding-left: 10px;
     margin-left: 15px;
     margin-right: 15px;
-
-    @include respond-to(xs) {
-        max-width: none;
-        //margin-left: 0px;
-        //margin-right: 0px;
-    }
-
-    &:hover {
-        border-color: 1px solid var(--main_vv);
-        transition: border $transition_fast;
-    }
+    max-width: 22%;
+    min-width: 250px;
 
     & > .img__container {
         height: 230px;
         width: 100%;
         position: relative;
+        border-radius: 5px;
+        overflow: hidden;
         
         & > img {
            width: 100%;
@@ -43,7 +23,7 @@
     }
 
 
-    & > div {
+    & > .news_text {
         margin-top: 20px;
         width: 100%;
         display: flex;
